--- a/src/main/webapp/pages/tarefaSave.xhtml
+++ b/src/main/webapp/pages/tarefaSave.xhtml
@@ -18,7 +18,7 @@
 
 				<p:outputLabel value="Projeto" for="projeto" />
 	            <p:selectOneMenu id="projeto" value="#{createTarefaController.projetoId}" editable="true" required="true">
-                    <f:selectItem itemLabel="Selecine Um Projeto" itemValue=""/>
+                    <f:selectItem itemLabel="Selecine um Projeto" itemValue=""/>
                     <f:selectItems value="#{createTarefaController.mapProjetos}"/>
                 </p:selectOneMenu>
                 <p:message for="projeto"/>
@@ -28,7 +28,8 @@
                 <p:message for="titulo"/>
 
 				<p:outputLabel value="Descrição" for="descricao"/>
-				<p:inputText value="#{createTarefaController.tarefa.descricao}" id="descricao" required="true"/>
+				<p:inputTextarea value="#{createTarefaController.tarefa.descricao}" id="descricao" required="true"
+					rows="6" cols="33"/>
                 <p:message for="descricao"/>
 
 				<p:outputLabel value="Data Inicio" for="dataInicio"/>
@@ -55,7 +56,7 @@
 						styleClass="ui-button-raised ui-button-success" icon="pi pi-save"/>
 						
 					<p:button style="width: 10; margin: 10px" value="Voltar"
-						href="./tarefaList.xhtml" styleClass="ui-button-raised ui-button-danger" />
+						href="./tarefaList.xhtml" styleClass="ui-button-secondary" />
 				</f:facet>
 			</p:panelGrid>
 		</h:form>
