--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,13 +5,16 @@
       xmlns:p="http://primefaces.org/ui">
 	<h:head>
 	    <title>Página Inicial</title>
+	    <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/favicon.ico"/>
 	</h:head>
 	<h:body>
 	    <h:form>
-	    	<p:panelGrid columns="2" cellpadding="0" cellspacing="2">
-				<p:outputLabel value="Bem-vindo ao desafio!" />
+	    	<p:panel>
+	    		<p:outputLabel value="Bem-vindo ao desafio!">
+					<h:graphicImage value="/favicon.png"/>
+				</p:outputLabel>
 		        <p:button value="Clique aqui para continuar" outcome="pages/welcome.faces" />
-			</p:panelGrid>
+			</p:panel>
 	    </h:form>
 	</h:body>
 </html>
