--- a/src/main/webapp/pages/tarefaSave.xhtml
+++ b/src/main/webapp/pages/tarefaSave.xhtml
@@ -38,7 +38,7 @@
 
 				<p:outputLabel value="Prioridade" for="prioridade"/>
 				<p:selectOneMenu id="prioridade" value="#{createTarefaController.prioridade}">
-                    <f:selectItem itemLabel="Selecione um" itemValue=""/>
+                    <f:selectItem itemLabel="" itemValue=""/>
                     <f:selectItem itemLabel="Muito Alta" itemValue="1"/>
                     <f:selectItem itemLabel="Alta" itemValue="2"/>
                     <f:selectItem itemLabel="Baixa" itemValue="3"/>
